# win_vcpkg_cmake_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
